<resources>
    <string name="app_name">CourseMatcher</string>
    <string name="title_home">Karte</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="meetup_header">Freunde treffen</string>
    <string name="meetup_header_desc">Schlage vor, wo und wann ihr euch trefft.</string>
    <string name="meetup_time">Wann wollt ihr euch treffen?</string>
    <string name="meetup_private">lieber privat treffen</string>
    <string name="meetup_place">Wo wollt ihr euch treffen?</string>
    <string name="meetup_submit_btn">weiter und Freunde auswählen</string>
    <string name="meetup_info_submit_btn">Weiter</string>
    <string name="meetup_info_submit_btn_loading">Speichern…</string>
    <string name="invite_friends_header_desc">Wähle aus, mit wem du dich treffen möchtest:</string>
    <string name="invite_friends_back_btn">zurück</string>
    <string name="invite_friends_submit_btn">abschicken</string>
    <string name="meetup_time_in_past">Die gewählte Uhrzeit liegt in der Vergangenheit. Bitte wähle eine neue Uhrzeit.</string>
    <string name="invite_friends">Freunde auswählen</string>
    <string name="invitation_success_header">Geschafft!</string>
    <string name="invitation_success_header_desc">Deine Anfrage für euer Meetup wurde erfolgreich an deine Freunde versandt! Warte auf eine Reaktion und genießt die Zeit zusammen.</string>
    <string name="back_to_home_btn">zurück zum Homescreen</string>
    <string name="invitation_success_dialog">Dein Meetup wurde erfolgreich versendet. Warte auf die Reaktion deiner Freunde und viel Spaß bei eurem Treffen!</string>
    <string name="invitation_success_title">"Meetup versendet!"</string>
    <string name="invitation_success_close_dialog">"OK"</string>
    <string name="content_description_edit_button">meetup edit button</string>
    <string name="meetup_formatted_time">%1$s:%2$s</string>
    <string name="title_notifications">Benachrichtigungen</string>
    <string name="title_profile">Profil</string>
    <string name="title_friends">Freunde</string>
    <string name="title_find_friends">Freunde finden</string>
    <string name="add_friend">Freunde hinzufügen</string>
    <string name="btn_send_friend_request">Anfrage senden</string>
    <string name="title_activity_login_register">LoginRegisterActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="hello_blank_fragment">Meetuplist</string>
    <string name="registerTitle">Registrieren</string>
    <string name="registerEmailEditText">mau.musterkatze@stud.uni-regensburg.de</string>
    <string name="registerPasswordEditText">musterkatze123</string>
    <string name="registerFirstNameHint">Mau</string>
    <string name="registerLastNameHint">Musterkatze</string>
    <string name="registerLoginBtn">Bereits registriert? <u>Zum Login</u></string>
    <string name="registerUsernameHint">maumusterkatze</string>
    <string name="registerRegisterBtn">Registrieren</string>
    <string name="loginTitle">Login</string>
    <string name="userEmailHint">mau.musterkatze@stud.uni-regensburg.de</string>
    <string name="userPasswordHint">maumusterkatze123</string>
    <string name="loginLoginBtn">Einloggen</string>
    <string name="loginRegisterBtn">Noch kein Account? <u>Jetzt registrieren.</u></string>
    <string name="loginUserNameEditText">maumusterkatze</string>
    <string name="btn_meetup_send_invite">Abschicken</string>
    <string name="profile_picture_decription">Profilbild</string>
    <string name="friendslist_tv_no_friends">Keine Freunde gefunden.</string>
    <string name="frindslist_btn_find_friends">Freunde finden</string>
    <string name="btn_send_friend_request_default">Anfragen</string>
    <string name="btn_send_friend_request_pending">Angefragt</string>
    <string name="button_color">#FFF3AC41</string>
    <string name="button_color_disabled">#FFD3D3D3</string>
    <string name="btn_friends_text">Freunde</string>
    <string name="snackbar_no_friends_text">Erst Freunde finden?</string>
    <string name="add_snackbar_text">ADD</string>
    <string name="snackbar_sent_request">Anfrage wurde verschickt.</string>
    <string name="snackbar_remove_request">Anfrage wurde entfernt.</string>
    <string name="searchbar_text_find_friends">Freunde finden…</string>
    <string name="search_button_decription">Suchbutton</string>
    <string name="empty_string">""</string>
    <string name="add_friends">add friends</string>
    <string name="friends_tabs_list">Deine Freunde</string>
    <string name="friends_tabs_requests">Anfragen</string>
    <string name="title_meetup">Meetup</string>
    <string name="meetup_success_icon">🙌</string>
    <string name="meetup_success_title">Du hast es geschafft!</string>
    <string name="meetup_success_description">Euer Treffen wurde erfolgreich erstellt. Genieße die Zeit mit deinen Freunden.</string>
    <string name="meetup_success_btn_text">Zur Meetup-Übersicht</string>
    <string name="select_time">wähle eine Zeit aus</string>
    <string name="meetup_time_desc">Wann soll das Treffen stattfinden?</string>
    <string name="add_meeting">add meeting</string>
    <string name="location">Location</string>
    <string name="time">time</string>
    <string name="location_card">location</string>
    <string name="meetup_tabs_list">Anstehend</string>
    <string name="meetup_tabs_requests">Anfragen</string>
    <string name="searchbar_text_search_through_friends">Freundesliste durchsuchen…</string>
    <string name="user_image">user image</string>
    <string name="MeetupDetailedTitle">Meetupinfo</string>
    <string name="meetup_create_error">Etwas ist schiefgelaufen, versuche es erneut.</string>
    <string name="meetup_request_description">lädt dich ein.</string>
    <string name="meetup_accepted_text_own">rechnet mit dir.</string>
    <string name="meetup_accepted_text_other">kommt auch.</string>
    <string name="meetup_declined_text">kommt leider nicht.</string>
    <string name="decline_snackbar_text">Anfrage abgelehnt.</string>
    <string name="undo_snackbar_text">Rückgängig</string>
    <string name="friend_request_text">möchte mit dir befreundet sein.</string>
    <string name="friend_accepted_text">ist jetzt auf deiner Freundesliste.</string>
    <string name="meetup_active_text">Seit %1$s</string>
    <string name="meetup_ended_text">Beendet</string>
    <string name="delete_snackbar_text">Anfrage gelöscht.</string>
    <string name="meetup_list_no_meetups_found">Keine Meetups gefunden. Du kannst ein neues Meetup erstellen, indem du auf den \"+\" Button klickst.</string>
    <string name="find_friends_no_friends_found">Es wurden keine Einträge für den Suchbegriff gefunden.</string>
    <string name="content_description_profile_image">Profile Image of user</string>
    <string name="profile_title_bio">Bio</string>
    <string name="content_description_back_button">Navigate to previous screen</string>
    <string name="profile_btn_add_friend">Anfragen</string>
    <string name="profile_btn_remove_friend">Entfernen</string>
    <string name="content_description_profile_settings">Navigate to Profile Settings</string>
    <string name="content_description_divider">Divider</string>
    <string name="title_settings">Einstellungen</string>
    <string name="app_version_string">App-Version: %1$s</string>
    <string name="link_label_edit_profile">Profil bearbeiten</string>
    <string name="link_label_edit_account">Account bearbeiten</string>
    <string name="link_label_edit_notifications">Benachrichtigungen</string>
    <string name="about"><u>Über CourseMatcher</u></string>
    <string name="link_label_privacy_policy">Datenschutzerklärung</string>
    <string name="link_label_imprint">Impressum</string>
    <string name="link_label_logout">Abmelden</string>
    <string name="link_label_delete_account">Account löschen</string>
    <string name="url_imprint">https://www.uni-regensburg.de/impressum/startseite/index.html</string>
    <string name="url_privacy_policy">https://www.uni-regensburg.de/datenschutz/startseite/index.html</string>
    <string name="title_edit_profile">Profil bearbeiten</string>
    <string name="title_edit_account">Account bearbeiten</string>
    <string name="input_label_email">E-Mail Adresse</string>
    <string name="input_label_current_password">Aktuelles Passwort</string>
    <string name="input_label_new_password">Neues Passwort</string>
    <string name="input_label_new_password_confirm">Neues Passwort bestätigen</string>
    <string name="no_requests_found">Keine Anfragen gefunden.</string>
    <string name="content_description_splash_screen_logo">Splash Screen Logo</string>
    <string name="input_label_bio">Bio</string>
    <string name="input_label_username">Nutzername</string>
    <string name="input_label_display_name">Anzeigename</string>
    <string name="edit_cancel">Abbrechen</string>
    <string name="edit_save">Speichern</string>
    <string name="edit_profile_success_message">Änderungen wurden gespeichert</string>
    <string name="edit_profile_error_message">Ein Fehler ist aufgetreten. Versuche es erneut.</string>
    <string name="edit_profile_error_min_length">%1$s muss mindestens %2$s Zeichen lang sein</string>
    <string name="edit_profile_bio_char_count">%1$d/%2$d</string>
    <string name="dialog_title_field">%1$s bearbeiten</string>
    <string name="edit_account_email">Dein Account ist mit dieser Mail-Adresse verknüpft. Du brauchst sie, damit du dich einloggen kannst. Deshalb kann sie nicht nachträglich angepasst werden.</string>
    <string name="edit_account_password">Passwort ändern</string>
    <string name="edit_account_error_password_not_empty">Passwort-Felder dürfen nicht leer sein</string>
    <string name="edit_account_error_password_min_length">Passwort muss mindestens 6 Zeichen lang sein</string>
    <string name="edit_account_error_password_must_differ">Das neue Passwort darf nicht mit dem alten übereinstimmen</string>
    <string name="edit_account_error_password_must_match">Das neue Passwort und die Bestätigung müssen übereinstimmen</string>
    <string name="edit_account_success_password_change">Passwort erfolgreich geändert</string>
    <string name="edit_account_error_password_not_changed">Passwort konnte nicht geändert werden</string>
    <string name="edit_profile_field_not_empty">Feld darf nicht leer sein</string>
    <string name="edit_profile_username_min_length">Benutzername muss mindestens 4 Zeichen lang sein</string>
    <string name="edit_profile_success">Erfolgreich aktualisiert</string>
    <string name="edit_profile_general_error">Ein Fehler ist aufgetreten</string>
    <string name="title_meetups">Meetups</string>
    <string name="start_title">Willkommen bei\n Course Matcher!</string>
    <string name="start_header">Triff deine Freunde am Campus - spontan und einfach.</string>
    <string name="profile_title">Erstelle ein Profil</string>
    <string name="profile_header">und füge deine Freunde hinzu!</string>
    <string name="meet_title">Vereinbart ein Treffen am Campus</string>
    <string name="accept">Zusagen</string>
    <string name="decline">Absagen</string>
    <string name="late">Komme etwas später</string>
    <string name="delete">Meetup löschen</string>
    <string name="map">Auf Karte anzeigen</string>
    <string name="dialog_delete_meetup_title">Meetup wirklich löschen?</string>
    <string name="dialog_delete_btn">Löschen</string>
    <string name="leave">Verlassen</string>
    <string name="content_description_center_btn">Eigenen Standort auf der Karte zentrieren</string>
    <string name="content_description_hide_location_btn">Eigener Standort ist aktuell für Freunde nicht sichtbar</string>
    <string name="content_description_show_location_btn">Eigener Standort ist aktuell für Freunde sichtbar</string>
</resources>