<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <!--<item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_map"
        android:title="@string/title_home" />-->

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_map"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_meetup_tabs"
        android:icon="@drawable/ic_meetup"
        android:title="@string/title_meetup"/>

    <item
        android:id="@+id/navigation_friends"
        android:icon="@drawable/ic_friends"
        android:title="@string/title_friends" />


    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/title_profile" />

</menu>