<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_margin="10dp"
    android:orientation="vertical"
    android:weightSum="2"
    tools:context=".ui.meetup.MeetupFragment">


    <TextView
        android:id="@+id/meetup_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/meetup_header"
        android:textAlignment="center"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/meetup_header_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/meetup_header_desc"
        android:textSize="16sp" />


    <TextView
        android:id="@+id/meetup_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/meetup_time" />


    <TimePicker
        android:id="@+id/meetup_time_picker"
        android:layout_width="334dp"
        android:layout_height="197dp"
        android:layout_gravity="center"
        android:timePickerMode="spinner" />

    <TextView
        android:id="@+id/meetup_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginTop="20dp"
        android:text="@string/meetup_place" />


    <Spinner
        android:id="@+id/meetup_location_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:spinnerMode="dropdown"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <CheckBox
        android:id="@+id/meetup_private_checkBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/meetup_private" />

    <Button
        android:id="@+id/meetup_info_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:text="@string/meetup_info_submit_btn"
        android:textColor="@color/white" />
</LinearLayout>




