<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:padding="@dimen/padding_big"
    tools:context=".ui.meetup_invite_success.MeetupInviteSuccessFragment">

    <nl.dionsegijn.konfetti.xml.KonfettiView
        android:id="@+id/konfettiView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/meetup_success_icon"
            android:textAlignment="center"
            android:textSize="@dimen/text_size_ultra" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/padding_small"
            android:fontFamily="@font/readexpro_semibold"
            android:text="@string/meetup_success_title"
            android:textAlignment="center"
            android:textSize="@dimen/text_size_big" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/readexpro_regular"
            android:lineSpacingMultiplier="1.3"
            android:text="@string/meetup_success_description"
            android:textAlignment="center"
            android:textColor="@color/gray600"
            android:textSize="@dimen/text_size_medium" />

        <Button
            android:id="@+id/btnToMeetupList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_double"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/meetup_success_btn_text" />
    </LinearLayout>

</RelativeLayout>