<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_margin="10dp"
    android:orientation="vertical"
    android:weightSum="2"
    tools:context=".ui.InviteFriends.InviteFriendsFragment"
    android:background="@color/orange">


    <TextView
        android:id="@+id/invitation_success_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/invitation_success_header"
        android:textAlignment="center"
        android:textSize="40sp"
        android:textColor="@color/white"/>

    <TextView
        android:id="@+id/invitation_success_header_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/invitation_success_header_desc"
        android:textSize="16sp" />


    <Button
        android:id="@+id/back_to_home_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:backgroundTint="@color/white"
        android:textColor="@color/black"
        android:gravity="center"
        android:layout_marginTop="50dp"
        android:text="@string/back_to_home_btn"/>


</LinearLayout>




