<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:weightSum="2"
    android:layout_margin="10dp"
    tools:context=".ui.InviteFriends.InviteFriendsFragment">


    <TextView
        android:id="@+id/invite_friends_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/invite_friends"
        android:textAlignment="center"
        android:textSize="40sp"/>

    <TextView
        android:id="@+id/invite_friends_header_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/invite_friends_header_desc"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/placeholder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/placeholder"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="40dp">

    <Button
        android:id="@+id/invite_friends_back_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="@color/purple_700"
        android:text="@string/invite_friends_back_btn"
        android:textColor="@color/white"
        android:gravity="center"
        android:layout_gravity="start"
        android:layout_weight="0.2"
        android:layout_marginEnd="20dp" />

    <Button
        android:id="@+id/invite_friends_submit_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="@color/purple_700"
        android:text="@string/invite_friends_submit_btn"
        android:textColor="@color/white"
        android:gravity="center"
        android:layout_gravity="end"
        android:layout_weight="0.2"
        android:layout_marginStart="20dp"/>
    </LinearLayout>
</LinearLayout>




