<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/rounded_dialog_bg"
    android:orientation="vertical"
    android:padding="@dimen/padding_double">

    <TextView
        android:id="@+id/dialogTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/padding_big"
        android:fontFamily="@font/readexpro_semibold"
        tools:text="@string/dialog_delete_meetup_title"
        android:textSize="@dimen/text_size_medium" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_big"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnCancel"
            style="@style/BtnOrangeSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/btn_rounded"
            android:backgroundTint="@color/gray400"
            android:text="@string/edit_cancel"
            android:textColor="@color/gray700" />

        <Space
            android:layout_width="@dimen/padding_big"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btnConfirm"
            style="@style/BtnOrangeSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/btn_rounded"
            android:text="@string/dialog_delete_btn" />
    </LinearLayout>
</LinearLayout>