<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <com.google.android.gms.maps.MapView
        android:id="@+id/mapView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />


    <ImageView
        android:id="@+id/location_btn_wrapper"
        android:layout_width="@dimen/btn_size"
        android:layout_height="@dimen/padding_ultra"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="@dimen/padding_small"
        android:background="@drawable/icon_placeholder" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/location_btn_wrapper"
        android:layout_alignTop="@+id/location_btn_wrapper"
        android:layout_alignEnd="@+id/location_btn_wrapper"
        android:layout_alignBottom="@+id/location_btn_wrapper"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/btn_center_on_user"
            android:layout_width="@dimen/btn_size"
            android:layout_height="@dimen/btn_size"
            android:layout_gravity="center"
            android:contentDescription="@string/content_description_center_btn"
            android:src="@drawable/ic_map_small" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/stroke_width_half"
            android:paddingHorizontal="@dimen/padding_half"
            android:contentDescription="@string/content_description_divider"
            android:src="@drawable/divider_horizontal_grey" />

        <ImageView
            android:id="@+id/btn_show_location"
            android:layout_width="@dimen/btn_size"
            android:layout_height="@dimen/btn_size"
            android:layout_gravity="center"
            android:contentDescription="@string/content_description_show_location_btn"
            android:src="@drawable/ic_share_location"
            android:visibility="gone"/>

        <ImageView
            android:id="@+id/btn_hide_location"
            android:layout_width="@dimen/btn_size"
            android:layout_height="@dimen/btn_size"
            android:layout_gravity="center"
            android:contentDescription="@string/content_description_hide_location_btn"
            android:src="@drawable/ic_hide_location"
            android:visibility="gone"/>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvUserCards"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true" />

</RelativeLayout>