<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.friends.FriendsListFragment">


    <LinearLayout
        android:id="@+id/searchBarWrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_header"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/readexpro_semibold"
            android:text="@string/title_friends"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <EditText
                android:id="@+id/etUserSearch"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:background="@drawable/btn_rounded"
                android:backgroundTint="@color/white"
                android:hint="@string/searchbar_text_search_through_friends"
                android:inputType="text"
                android:paddingHorizontal="20dp"
                android:paddingVertical="10dp"
                android:layout_alignParentStart="true"
                android:layout_toStartOf="@id/ivClearInput"
                />

            <ImageView
                android:id="@+id/ivClearInput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_clear_input_btn"
                android:contentDescription="TODO"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="10dp"
                android:layout_centerVertical="true"
                android:visibility="gone" />
                />
        </RelativeLayout>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvUserList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/searchBarWrapper"
        android:clipToPadding="false"
        android:visibility="gone"
        tools:listitem="@layout/item_single_friend" />

    <LinearLayout
        android:id="@+id/noFriendsWrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="16dp"
            android:text="@string/friendslist_tv_no_friends"
            android:textAlignment="center"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btnAddFriends"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/frindslist_btn_find_friends" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/loadingCircle"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:indeterminate="true"
        android:indeterminateTint="#98A3C3" />
</RelativeLayout>